# wordlens-ai

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: error.rs  handlers.rs  history.rs  lib.rs  main.rs  ollama.rs  prompts.rs  ratelimit.rs  state.rs  types.rs
backend/tests/: api.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: chat_area.rs  entry.ssr.tsx  global.css  header.rs  icons.rs  info_modal.rs  input_bar.rs  lens_selector.rs  main.rs  root.tsx  streaming.rs  types.rs
frontend/src/routes/: index.tsx
frontend/src/routes/api/explain/: index.ts
