[package]
name = "wordlens-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "wordlens_backend"
path = "src/lib.rs"

[[bin]]
name = "wordlens-backend"
path = "src/main.rs"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
serde_json = "1"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
futures = "0.3"
bytes = "1"
moka = { version = "0.12", features = ["future"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
